fixed small whitespace on left

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,7 @@
     position: absolute;
     z-index: 0;
     object-fit: cover;
-    width: 100%;
+    width: 101%;
     height: 100%;
     top: 49%;
     left: 50%;
